[package]
name = "request-client"
version = "0.0.0"
edition = "2021"
description = "This is a request client library that provides a traversal method"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.19"